# cloudguard-modules

./: .gitignore  README.md  install.sh  pyproject.toml  reinstall.sh
.github/workflows/: package_and_publish.yml
cloudguard_modules/gcp/modules/compute/: gcs.py
cloudguard_modules/gcp/modules/iam/: iam_admin.py
cloudguard_modules/gcp/modules/network/: dns.py  firewall.py
cloudguard_providers/gcp/modules/iam/: iam_admin.py
cloudguard_providers/gcp/scripts/: export_iam_bindings.sh
